Remastered the UI to be more streamlined based on feedback:
- No longer separate mod-alert and drop message.
- The first alert will remain a message about supporting modding, the rest will be customizable alerts per mod.
- The alert symbol will be marked red when new alerts are found, to be cleared as they are read-through.
- Subsequent reloads will mark all alerts as old.
- Added more UI to allow for scrolling forward/back along the alerts list.

The system has been remastered into a true API - so that any mod-author can make use of it:
- As before only requires mod-author to include a ChangeLog.txt (Now expected in /common/ for B42+, as before /media/ for B41-)
- Also supports the use of a changelog.md file if a changelog.txt file is not present, see `ChangeLog.md` for that format. (Suggestion: Omar)
- Alerts support programmable buttons by the mod's respective author.
- Well known sites are color-coded and override a provided title with a logo.
- Sites that do not start with: `https://steamcommunity.com`, `https://projectzomboid.com`, `https://theindiestone.com`, require Steam's link filter: `https://steamcommunity.com/linkfilter/?u=`.
See: `ChangeLog.txt` and `ChangeLog.md` entry: ALERT_CONFIG for an example.

Fixes: Anchored UI to handle screen size changes.
[ ------ ]

[ 1/20/25 ]
- Added support for 'Author' field in Mod.info to appear on alerts.
- Moved the 'Message from Chuck' to appear behind new alerts.
- Added another Spiffo to the art selector.
[ ------ ]

[ 1/21/25 ]
- Fix scroll-wheel not updating buttons.
- Moved button update setter.
- Set icons to scale to 32x32.
- Removed RU translation (reported as broken.)
[ ------ ]

[ 1/23/25 ]
- Removed debug print calls.
- Added button's title to tooltip if icon present.
[ ------ ]

[ 1/24/25 ]
- The alert window now scales to fit screen size.
- The alert window now anchors to one of the bottom panel buttons when possible.
[ ------ ]

[ PENDING ]
- Added RU translation. (credit: Slobodskoy)
[ ------ ]